--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
-    "node": "^9.11.0"
+    "node": "^9.11.0",
+    "request": "^2.85.0"
   }
 }
