--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "node": "^9.11.0",
+    "react-native-popup-dialog": "^0.11.46",
     "request": "^2.85.0"
   }
 }
