--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "mongodb": "^3.0.7",
     "node": "^9.11.0",
     "react-native-popup-dialog": "^0.11.46",
     "request": "^2.85.0"
